--- a/css/style.css
+++ b/css/style.css
@@ -787,4 +787,10 @@ a.text-primary:hover {
  . a n i m a t e d - u n d e r l i n e   {   p o s i t i o n :   r e l a t i v e ;   d i s p l a y :   i n l i n e - b l o c k ;   }  
  . a n i m a t e d - u n d e r l i n e : : a f t e r   {   c o n t e n t :   ' ' ;   p o s i t i o n :   a b s o l u t e ;   b o t t o m :   - 2 p x ;   l e f t :   0 ;   w i d t h :   0 ;   h e i g h t :   2 p x ;   b a c k g r o u n d :   v a r ( - - p r i m a r y - c o l o r ) ;   t r a n s i t i o n :   w i d t h   0 . 3 s   e a s e ;   }  
  . a n i m a t e d - u n d e r l i n e : h o v e r : : a f t e r   {   w i d t h :   1 0 0 % ;   }  
+ / *   P u l s e   A n i m a t i o n   * /  
+ @ k e y f r a m e s   p u l s e   {  
+         0 % ,   1 0 0 %   {   t r a n s f o r m :   s c a l e ( 1 ) ;   }  
+         5 0 %   {   t r a n s f o r m :   s c a l e ( 1 . 0 5 ) ;   }  
+ }  
+ . p u l s e   {   a n i m a t i o n :   p u l s e   2 s   i n f i n i t e ;   }  
  
